[package]
name = "sbor"
version = "0.1.0"
edition = "2021"

[dependencies]
simple-bigint = { path = "../simple-bigint" }
paste = "1.0.9"

[dev-dependencies]
blake2 = { version = "0.10.6", default-features = false }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("stax", "flex", "nanox", "nanosplus"))'] }
